ClientApp/clientapp-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: angular-deployment 
  labels: 
    app: angular 
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: angular 
  template: 
    metadata: 
      labels: 
        app: angular 
    spec: 
      containers: 
      - name: angular-container 
        image: localhost:32000/angularv10:latest 
        ports: 
        - containerPort: 80
