ClientApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-ip
  labels:
    app: ingress_label
spec:
  defaultBackend:
    service:
      name: angular-service
      port:
        number: 8091
